master
------

* Reduce time to store old check results to 7 days
  - Currently stores for 2 months, but there's no actual way to view the old data.

Version 0.11.0
--------------

* Jenkins support:
  - Fail Jenkins checks when job is unknown
  - Use [jenkinsapi](https://pypi.python.org/pypi/jenkinsapi) to talk to Jenkins
  - Add option to specify multiple Jenkins backends
  > NOTE: This update will delete any recent status check results for jenkins checks
* Add view for public services
* Add support for Google OAuth login
* Add ability to add custom check plugins
  - See https://gitlab.com/as-public/cabot-check-skeleton for an example
* Remove deprecated Fabfile and Shell scripts

Version 0.10.8
--------------

* Update slack alert to 0.8.1
  - fixes names not linking
  - only shows the acknowledge button if "SLACK_INTERACTIVE_MESSAGES" is set
    - (The feature only works if set up correctly on the slack end)
* Update to django 1.11 (with working django-polymorphic this time)

Version 0.10.7
--------------

* Update slack alert plugin
  - Now shows an "acknowledge" button within slack
* Fix alert tests not triggering if:
  - A user had acknowledged working on the service
  - A legitimate alert had been sent recently
* Add support for GitHub OAuth logins
  - See http://cabotapp.com/use/users.html

Version 0.10.6
--------------

* Fix plugin urls being overridden by plugin settings urls
  - This fixes e.g. the twilio callback url not working
* Fix profile settings sidebar links not working

Version 0.10.5
--------------

* Fix bug which caused status graphs to sometimes not render
* Fix issue with complex recurring calendar - `'vDDDLists' object is not iterable`
* Fix css regression in logo/title

Version 0.10.4
--------------

* Fix basic auth passwords getting reset when editing checks
* Fix plugin alert tests alerting the current duty officer
  - They should now always alert only the user that runs the test

Version 0.10.3
--------------
