@@ -1,6 +1,7 @@
 master
 ------
 
+* Fix migration requiring jenkins environment variables are set
 * Reduce time to store old check results to 7 days
   - Currently stores for 2 months, but there's no actual way to view the old data.
 
